complete update multi user feature for user list ui admin

--- a/views/admin/pages/permission/permission.view.ejs
+++ b/views/admin/pages/permission/permission.view.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%-include("../../partials/seoMeta.view.ejs", { pageTitle: pageTitle}) %>
-    
+
     <!-- Style Library & Framework -->
     <link
       rel="stylesheet"
@@ -177,7 +177,7 @@
 
                 <!-- Các quyền dành cho tài khoản -->
                 <tr>
-                  <td class="bg-body-secondary"><b>Các quyền về tài khoản</b></td>
+                  <td class="bg-body-secondary"><b>Các quyền về quản trị viên</b></td>
                   <% roleList.forEach(role => { %>
                   <td class="bg-body-secondary"></td>
                   <% }) %>
@@ -219,6 +219,56 @@
                   <% }) %>
                 </tr>
                 <tr data-name="account-hard-delete">
+                  <td>Xóa cứng</td>
+                  <% roleList.forEach(role => { %>
+                  <td class="text-center"><input type="checkbox" /></td>
+                  <% }) %>
+                </tr>
+
+                <!-- Các quyền dành cho tài khoản -->
+                <tr>
+                  <td class="bg-body-secondary"><b>Các quyền về người dùng</b></td>
+                  <% roleList.forEach(role => { %>
+                  <td class="bg-body-secondary"></td>
+                  <% }) %>
+                </tr>
+                <tr data-name="user-view">
+                  <td>Xem</td>
+                  <% roleList.forEach(role => { %>
+                  <td class="text-center"><input type="checkbox" /></td>
+                  <% }) %>
+                </tr>
+                <tr data-name="user-add">
+                  <td>Thêm mới</td>
+                  <% roleList.forEach(role => { %>
+                  <td class="text-center"><input type="checkbox" /></td>
+                  <% }) %>
+                </tr>
+                <tr data-name="user-change-status">
+                  <td>Đổi trạng thái</td>
+                  <% roleList.forEach(role => { %>
+                  <td class="text-center"><input type="checkbox" /></td>
+                  <% }) %>
+                </tr>
+                <tr data-name="user-update">
+                  <td>Chỉnh sửa</td>
+                  <% roleList.forEach(role => { %>
+                  <td class="text-center"><input type="checkbox" /></td>
+                  <% }) %>
+                </tr>
+                <tr data-name="user-sort-delete">
+                  <td>Xóa mềm</td>
+                  <% roleList.forEach(role => { %>
+                  <td class="text-center"><input type="checkbox" /></td>
+                  <% }) %>
+                </tr>
+                <tr data-name="user-restore">
+                  <td>Khôi phục</td>
+                  <% roleList.forEach(role => { %>
+                  <td class="text-center"><input type="checkbox" /></td>
+                  <% }) %>
+                </tr>
+                <tr data-name="user-hard-delete">
                   <td>Xóa cứng</td>
                   <% roleList.forEach(role => { %>
                   <td class="text-center"><input type="checkbox" /></td>
