--- a/views/admin/pages/user/user.view.ejs
+++ b/views/admin/pages/user/user.view.ejs
@@ -61,8 +61,8 @@
             <div class="container-fluid">
               <div class="row gap-lg-0 gap-2 justify-content-between">
                 <div class="col-lg-5 col-12">
-                  <%#-include("../../partials/changeMulti.view.ejs", { statusList: statusList, url:
-                  'accounts', type: 'account' }) %>
+                  <%-include("../../partials/changeMulti.view.ejs", { statusList: statusList, url:
+                  'users', type: 'user' }) %>
                 </div>
                 <div class="col-lg-4 col-12">
                   <% if(roleAuth.permission.includes("account-add")) { %>
