--- a/views/admin/pages/account/create.view.ejs
+++ b/views/admin/pages/account/create.view.ejs
@@ -139,8 +139,8 @@
                   </label>
                   <select name="status" id="status" class="form-control">
                     <option selected disabled>-- Lựa chọn trạng thái --</option>
-                    <option value="active">🟢 Hoạt động</option>
-                    <option value="inactive">🟡 Ngừng hoạt động</option>
+                    <option value="active">Hoạt động</option>
+                    <option value="inactive">Ngừng hoạt động</option>
                   </select>
                 </div>
               </div>
