--- a/views/admin/pages/account/update.view.ejs
+++ b/views/admin/pages/account/update.view.ejs
@@ -156,8 +156,8 @@
                   >
                   <select name="status" id="status" class="form-control">
                     <option disabled>-- Lựa chọn trạng thái --</option>
-                    <option value="active" <% if(account.status === 'active') {%>selected<% } %>>🟢 Hoạt động</option>
-                    <option value="inactive" <% if(account.status === 'inactive') {%>selected<% } %>>🟡 Ngừng hoạt động</option>
+                    <option value="active" <% if(account.status === 'active') {%>selected<% } %>>Hoạt động</option>
+                    <option value="inactive" <% if(account.status === 'inactive') {%>selected<% } %>>Ngừng hoạt động</option>
                   </select>
                 </div>
               </div>
