--- a/views/admin/pages/category/update.view.ejs
+++ b/views/admin/pages/category/update.view.ejs
@@ -118,12 +118,10 @@
                     ><span class="text-danger"><b>*</b></span> Trạng thái</label
                   >
                   <input type="radio" name="status" value="active" <% if(category.status ===
-                  'active') {%>checked<% } %> class="form-check-input bg-success" id="status-active"
-                  />
+                  'active') {%>checked<% } %> class="form-check-input" id="status-active" />
                   <label for="status-active" class="me-4">Hoạt động</label>
                   <input type="radio" name="status" value="inactive" <% if(category.status ===
-                  'inactive') {%>checked<% } %> class="form-check-input bg-warning"
-                  id="status-inactive" />
+                  'inactive') {%>checked<% } %> class="form-check-input" id="status-inactive" />
                   <label for="status-inactive">Ngừng hoạt động</label>
                 </div>
               </div>
