--- a/views/admin/pages/product/create.view.ejs
+++ b/views/admin/pages/product/create.view.ejs
@@ -244,7 +244,7 @@
                     name="status"
                     value="active"
                     checked
-                    class="form-check-input bg-success"
+                    class="form-check-input"
                     id="status-active"
                   />
                   <label for="status-active" class="me-4">Hoạt động</label>
@@ -252,7 +252,7 @@
                     type="radio"
                     name="status"
                     value="inactive"
-                    class="form-check-input bg-warning"
+                    class="form-check-input"
                     id="status-inactive"
                   />
                   <label for="status-inactive">Ngừng hoạt động</label>
@@ -269,7 +269,7 @@
                     type="radio"
                     name="featured"
                     value="1"
-                    class="form-check-input bg-success"
+                    class="form-check-input"
                     id="featured1"
                   />
                   <label for="featured1" class="me-4">Có</label>
@@ -278,7 +278,7 @@
                     name="featured"
                     value="0"
                     checked
-                    class="form-check-input bg-warning"
+                    class="form-check-input"
                     id="featured0"
                   />
                   <label for="featured0">Ko</label>
