--- a/views/admin/partials/sider.view.ejs
+++ b/views/admin/partials/sider.view.ejs
@@ -100,6 +100,14 @@
             sidebar-number="3"
             href="<%= prefixAdmin %>/orders"
           >
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-code"></i></div>
+            Mã giảm giá
+          </a>
+          <a
+            class="text-white d-flex gap-2 nav-link sidebar-nav-link"
+            sidebar-number="3"
+            href="<%= prefixAdmin %>/orders"
+          >
             <div class="sb-nav-link-icon"><i class="bi bi-bag-check-fill"></i></div>
             Đơn hàng
           </a>
@@ -110,6 +118,14 @@
           >
             <div class="sb-nav-link-icon"><i class="fa-solid fa-credit-card"></i></div>
             Thanh toán
+          </a>
+          <a
+            class="text-white d-flex gap-2 nav-link sidebar-nav-link"
+            sidebar-number="3"
+            href="<%= prefixAdmin %>/shipments"
+          >
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-fast"></i></div>
+            Vận chuyển
           </a>
           <!-- <a
             class="text-white d-flex gap-2 nav-link sidebar-nav-link"
