--- a/views/admin/pages/account/account.view.ejs
+++ b/views/admin/pages/account/account.view.ejs
@@ -34,7 +34,8 @@
           </div>
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"></div>
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-            <%-include("../../partials/search.view.ejs", { placeholder: "Nhập tên tài khoản..."}) %>
+            <%-include("../../partials/search.view.ejs", { placeholder: "Nhập tên quản trị viên..."
+            }) %>
           </div>
         </div>
 
@@ -68,7 +69,7 @@
                     href="<%= prefixAdmin %>/accounts/create"
                     class="btn btn-primary w-100 float-end mb-2"
                     ><i class="bi bi-plus-lg me-1"></i>
-                    Thêm mới tài khoản
+                    Thêm mới quản trị viên
                   </a>
                   <% } %>
                 </div>
@@ -80,7 +81,7 @@
                 <div class="col-12 overflow-x-scroll">
                   <% if (accountList.length === 0) {%>
                   <div class="text-center text-white bg-danger p-2">
-                    Không tìm thấy tài khoản nào
+                    Không tìm thấy quản trị viên nào
                   </div>
                   <% } %>
                   <table class="table table-hover table-sm">
@@ -190,7 +191,7 @@
               <%-include("../../partials/pagination.view.ejs") %>
             </div>
             <div class="col-lg-3 col-md-3 col-12">
-              <a href="<%= prefixAdmin %>/accounts/garbage" class="btn btn-primary float-end"
+              <a href="<%= prefixAdmin %>/accounts/garbage" class="btn btn-primary w-100 float-end"
                 ><i class="bi bi-trash me-2"></i>Thùng rác
               </a>
             </div>
