--- a/views/admin/pages/category/create.view.ejs
+++ b/views/admin/pages/category/create.view.ejs
@@ -118,7 +118,7 @@
                     name="status"
                     value="active"
                     checked
-                    class="form-check-input bg-success"
+                    class="form-check-input"
                     id="status-active"
                   />
                   <label for="status-active" class="me-4">Hoạt động</label>
@@ -126,7 +126,7 @@
                     type="radio"
                     name="status"
                     value="inactive"
-                    class="form-check-input bg-warning"
+                    class="form-check-input"
                     id="status-inactive"
                   />
                   <label for="status-inactive">Ngừng hoạt động</label>
