--- a/views/admin/pages/user/user.view.ejs
+++ b/views/admin/pages/user/user.view.ejs
@@ -70,7 +70,7 @@
                     href="<%= prefixAdmin %>/users/create"
                     class="btn btn-primary w-100 float-end mb-2"
                     ><i class="bi bi-plus-lg me-1"></i>
-                    Thêm mới tài khoản
+                    Thêm mới người dùng
                   </a>
                   <% } %>
                 </div>
@@ -105,6 +105,10 @@
                       <% if(roleAuth.permission.includes("account-change-status")) { %>
                       <th class="bg-primary-subtle text-primary text-decoration-underline">
                         Trạng thái
+                      </th>
+                      <% } %> <% if(roleAuth.permission.includes("account-update")) { %>
+                      <th class="bg-primary-subtle text-primary text-decoration-underline">
+                        Xác thực
                       </th>
                       <% } %> <% if(roleAuth.permission.includes("account-update") ||
                       roleAuth.permission.includes("account-sort-delete")) { %>
@@ -158,6 +162,30 @@
                           </a>
                           <% } %>
                         </td>
+                        <% } %> <% if(roleAuth.permission.includes("account-update")) { %>
+                        <td>
+                          <% if(user.isVerified) { %>
+                          <a
+                            href="javascript:;"
+                            data-id="<%= user._id %>"
+                            data-status="active"
+                            change-authentication
+                            class="badge"
+                            style="background: var(--info-color-admin)"
+                            >Đã kích hoạt
+                          </a>
+                          <% } else { %>
+                          <a
+                            href="javascript:;"
+                            data-id="<%= user._id %>"
+                            data-status="inactive"
+                            change-authentication
+                            class="badge"
+                            style="background: var(--error-color-admin)"
+                            >Chưa kích hoạt
+                          </a>
+                          <% } %>
+                        </td>
                         <% } %>
                         <td>
                           <% if(roleAuth.permission.includes("account-update")) { %>
@@ -193,7 +221,7 @@
               <%-include("../../partials/pagination.view.ejs") %>
             </div>
             <div class="col-lg-3 col-md-3 col-12">
-              <a href="<%= prefixAdmin %>/users/garbage" class="btn btn-primary float-end"
+              <a href="<%= prefixAdmin %>/users/garbage" class="btn btn-primary w-100 float-end"
                 ><i class="bi bi-trash me-2"></i>Thùng rác
               </a>
             </div>
@@ -205,6 +233,12 @@
 
     <%-include("../../partials/footer.view.ejs") %>
 
+    <form
+      action="<%= prefixAdmin %>/users"
+      method="POST"
+      class="d-none"
+      form-change-authentication
+    ></form>
     <form action="<%= prefixAdmin %>/users" method="POST" class="d-none" form-change-status></form>
     <form action="<%= prefixAdmin %>/users" method="POST" class="d-none" form-delete></form>
 
