--- a/views/admin/pages/user/create.view.ejs
+++ b/views/admin/pages/user/create.view.ejs
@@ -27,31 +27,26 @@
       <%-include("../../partials/sider.view.ejs") %>
       <div class="main">
         <%-include("../../partials/alertMessage.view.ejs") %> <%
-        if(roleAuth.permission.includes("account-add")) { %>
+        if(roleAuth.permission.includes("user-add")) { %>
         <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
-        <% if (roleList.length === 0) {%>
-        <div class="text-center text-white bg-danger p-2">
-          Cần có nhóm quyền mới vào đc trang này
-        </div>
-        <% } else {%>
         <form
-          action="<%= prefixAdmin %>/accounts/create"
+          action="<%= prefixAdmin %>/users/create"
           method="POST"
           enctype="multipart/form-data"
           id="form-handle"
         >
           <div class="container-fluid">
             <div class="row">
-              <div class="col-12">
+              <div class="col-md-4 col-12">
                 <div class="form-group mb-4">
-                  <label for="fullName" class="fw-bold"
+                  <label for="fullname" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span>
                     Họ & Tên
                   </label>
-                  <input type="text" name="fullName" required id="fullName" class="form-control" />
+                  <input type="text" name="fullname" required id="fullname" class="form-control" />
                 </div>
               </div>
-              <div class="col-6 mb-4">
+              <div class="col-md-4 col-12 mb-4">
                 <div class="form-group">
                   <label for="email" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span>
@@ -60,7 +55,7 @@
                   <input type="email" name="email" required id="email" class="form-control" />
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-md-4 col-12">
                 <div class="form-group mb-4">
                   <label for="password" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span>
@@ -94,6 +89,7 @@
                   <input type="phone" name="phone" required id="phone" class="form-control" />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="avatar" class="fw-bold">Ảnh đại diện</label>
@@ -108,6 +104,7 @@
                   />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="birthDay" class="fw-bold"
@@ -117,21 +114,8 @@
                   <input type="date" name="birthDay" id="birthDay" class="form-control" />
                 </div>
               </div>
+
               <div class="col-6">
-                <div class="form-group mb-4">
-                  <label for="roleId" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span>
-                    Phân quyền
-                  </label>
-                  <select name="roleId" id="roleId" class="form-control">
-                    <option selected disabled>-- Lựa chọn quyền --</option>
-                    <% roleList.forEach(role => { %>
-                    <option value="<%= role._id %>"><%= role.title %></option>
-                    <%}); %>
-                  </select>
-                </div>
-              </div>
-              <div class="col-12">
                 <div class="form-group mb-4">
                   <label for="status" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span>
@@ -144,13 +128,46 @@
                   </select>
                 </div>
               </div>
+
+              <div class="col-lg-7 col-md-6 col-12">
+                <div class="form-group mb-4">
+                  <label for="address" class="fw-bold"> Địa chỉ </label>
+                  <input type="text" name="address" required id="address" class="form-control" />
+                </div>
+              </div>
+
+              <div class="col-lg-5 col-md-6 col-12">
+                <div class="form-group mb-4">
+                  <label for="" class="fw-bold d-block"
+                    ><span class="text-danger"><b>*</b></span>
+                    Xác minh
+                  </label>
+                  <input
+                    type="radio"
+                    name="isVerified"
+                    value="active"
+                    checked
+                    class="form-check-input"
+                    id="isVerified-active"
+                  />
+                  <label for="isVerified-active" class="me-4">Đã xác minh</label>
+                  <input
+                    type="radio"
+                    name="isVerified"
+                    value="inactive"
+                    class="form-check-input"
+                    id="isVerified-inactive"
+                  />
+                  <label for="isVerified-inactive">Chưa xác minh</label>
+                </div>
+              </div>
             </div>
             <button type="submit" class="btn btn-outline-primary w-100 form-create">
-              <i class="bi bi-plus-lg me-1"></i>Thêm mới quản trị viên
+              <i class="bi bi-plus-lg me-1"></i>Thêm mới người dùng
             </button>
           </div>
         </form>
-        <% } %> <% } %>
+        <% } %>
       </div>
     </div>
 
