complete update user feature (update user ui and feature) admin

--- a/views/admin/pages/account/update.view.ejs
+++ b/views/admin/pages/account/update.view.ejs
@@ -52,6 +52,7 @@
                   />
                 </div>
               </div>
+              
               <div class="col-6 mb-4">
                 <div class="form-group">
                   <label for="email" class="fw-bold"
@@ -67,6 +68,7 @@
                   />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="password" class="fw-bold"
@@ -80,6 +82,7 @@
                   />
                 </div>
               </div>
+
               <div class="col-12">
                 <div class="image-box mb-4">
                   <div class="mb-4 d-flex jutify-content-end w-100 image-delete-box">
@@ -94,6 +97,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="phone" class="fw-bold"
@@ -109,6 +113,7 @@
                   />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="avatar" class="fw-bold">Ảnh đại diện</label>
@@ -122,11 +127,10 @@
                   />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="birthDay" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Ngày sinh</label
-                  >
+                  <label for="birthDay" class="fw-bold">Ngày sinh</label>
                   <input
                     type="date"
                     name="birthDay"
@@ -136,6 +140,7 @@
                   />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="roleId" class="fw-bold"
@@ -149,6 +154,7 @@
                   </select>
                 </div>
               </div>
+
               <div class="col-12">
                 <div class="form-group mb-4">
                   <label for="status" class="fw-bold"
