--- a/views/admin/partials/sider.view.ejs
+++ b/views/admin/partials/sider.view.ejs
@@ -98,7 +98,7 @@
           <a
             class="text-white d-flex gap-2 nav-link sidebar-nav-link"
             sidebar-number="3"
-            href="<%= prefixAdmin %>/orders"
+            href="<%= prefixAdmin %>/coupons"
           >
             <div class="sb-nav-link-icon"><i class="fa-solid fa-code"></i></div>
             Mã giảm giá
@@ -190,7 +190,12 @@
               <a
                 class="text-white d-flex gap-2 w-100 nav-link sidebar-nav-link"
                 href="<%= prefixAdmin %>/roles"
-                ><i class="bi bi-caret-right-fill me-1"></i>Danh sách nhóm quyền</a
+                ><i class="bi bi-caret-right-fill me-1"></i>Nhóm quyền quản trị</a
+              >
+              <a
+                class="text-white d-flex gap-2 w-100 nav-link sidebar-nav-link"
+                href="<%= prefixAdmin %>/roles/user"
+                ><i class="bi bi-caret-right-fill me-1"></i>Nhóm quyền người dùng</a
               >
               <a
                 class="text-white d-flex gap-2 w-100 nav-link sidebar-nav-link"
