--- a/views/admin/pages/account/create.view.ejs
+++ b/views/admin/pages/account/create.view.ejs
@@ -51,6 +51,7 @@
                   <input type="text" name="fullName" required id="fullName" class="form-control" />
                 </div>
               </div>
+
               <div class="col-6 mb-4">
                 <div class="form-group">
                   <label for="email" class="fw-bold"
@@ -60,6 +61,7 @@
                   <input type="email" name="email" required id="email" class="form-control" />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="password" class="fw-bold"
@@ -75,6 +77,7 @@
                   />
                 </div>
               </div>
+
               <div class="col-12">
                 <div class="image-box mb-4">
                   <div class="mb-4 d-flex jutify-content-end w-100 image-delete-box">
@@ -85,6 +88,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="phone" class="fw-bold"
@@ -94,6 +98,7 @@
                   <input type="phone" name="phone" required id="phone" class="form-control" />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="avatar" class="fw-bold">Ảnh đại diện</label>
@@ -108,15 +113,14 @@
                   />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="birthDay" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span>
-                    Ngày sinh
-                  </label>
+                  <label for="birthDay" class="fw-bold"> Ngày sinh</label>
                   <input type="date" name="birthDay" id="birthDay" class="form-control" />
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="roleId" class="fw-bold"
@@ -131,6 +135,7 @@
                   </select>
                 </div>
               </div>
+
               <div class="col-12">
                 <div class="form-group mb-4">
                   <label for="status" class="fw-bold"
