--- a/views/admin/pages/user/update.view.ejs
+++ b/views/admin/pages/user/update.view.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%-include("../../partials/seoMeta.view.ejs", { pageTitle: pageTitle}) %>
-
+    
     <!-- Style Library & Framework -->
     <link
       rel="stylesheet"
@@ -26,11 +26,11 @@
     <div class="body">
       <%-include("../../partials/sider.view.ejs") %>
       <div class="main">
-        <%-include("../../partials/alertMessage.view.ejs") %> <%
-        if(roleAuth.permission.includes("user-add")) { %>
-        <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
+        <%-include("../../partials/alertMessage.view.ejs") %>
+        <% if(roleAuth.permission.includes("user-update")) { %>
+          <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
         <form
-          action="<%= prefixAdmin %>/users/create"
+          action="<%= prefixAdmin %>/users/update/<%= user._id %>?_method=PATCH"
           method="POST"
           enctype="multipart/form-data"
           id="form-handle"
@@ -40,53 +40,77 @@
               <div class="col-md-4 col-12">
                 <div class="form-group mb-4">
                   <label for="fullname" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span>
-                    Họ & Tên
-                  </label>
-                  <input type="text" name="fullname" required id="fullname" class="form-control" />
+                    ><span class="text-danger"><b>*</b></span class="fw-bold"> Họ & Tên</label
+                  >
+                  <input
+                    type="text"
+                    name="fullname"
+                    value="<%= user.fullname %>"
+                    required
+                    id="fullname"
+                    class="form-control"
+                  />
                 </div>
               </div>
+
               <div class="col-md-4 col-12 mb-4">
                 <div class="form-group">
                   <label for="email" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span>
-                    Địa chỉ email
-                  </label>
-                  <input type="email" name="email" required id="email" class="form-control" />
+                    ><span class="text-danger"><b>*</b></span> Địa chỉ email</label
+                  >
+                  <input
+                    type="email"
+                    name="email"
+                    value="<%= user.email %>"
+                    required
+                    id="email"
+                    class="form-control"
+                  />
                 </div>
               </div>
+
               <div class="col-md-4 col-12">
                 <div class="form-group mb-4">
                   <label for="password" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span>
-                    Mật khẩu
-                  </label>
+                    ><span class="text-danger"><b>*</b></span> Mật khẩu</label
+                  >
                   <input
                     type="password"
                     name="password"
-                    required
                     id="password"
                     class="form-control"
                   />
                 </div>
               </div>
+
               <div class="col-12">
                 <div class="image-box mb-4">
                   <div class="mb-4 d-flex jutify-content-end w-100 image-delete-box">
                     <i class="bi bi-x-lg float-end mb-2 image-delete"></i>
                   </div>
                   <div class="d-flex justify-content-center image-upload-box">
-                    <img src="" alt="Hiển thị hình ảnh đại diện" class="image-upload" />
+                    <img
+                      src="<%= user.avatar %>"
+                      alt="Hiển thị hình ảnh đại diện"
+                      class="image-upload"
+                    />
                   </div>
                 </div>
               </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="phone" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span>
-                    Số điện thoại
-                  </label>
-                  <input type="phone" name="phone" required id="phone" class="form-control" />
+                    ><span class="text-danger"><b>*</b></span> Số điện thoại</label
+                  >
+                  <input
+                    type="phone"
+                    name="phone"
+                    value="<%= user.phone %>"
+                    required
+                    id="phone"
+                    class="form-control"
+                  />
                 </div>
               </div>
 
@@ -97,7 +121,6 @@
                     type="file"
                     name="avatar"
                     accept="image/*"
-                    required
                     id="avatar"
                     class="form-control"
                     input-upload-image
@@ -108,20 +131,25 @@
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="birthDay" class="fw-bold">Ngày sinh</label>
-                  <input type="date" name="birthDay" id="birthDay" class="form-control" />
+                  <input
+                    type="date"
+                    name="birthDay"
+                    value="<%= user.birthDay %>"
+                    id="birthDay"
+                    class="form-control"
+                  />
                 </div>
               </div>
-
+              
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="status" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span>
-                    Trạng thái
-                  </label>
+                    ><span class="text-danger"><b>*</b></span> Trạng thái</label
+                  >
                   <select name="status" id="status" class="form-control">
-                    <option selected disabled>-- Lựa chọn trạng thái --</option>
-                    <option value="active">Hoạt động</option>
-                    <option value="inactive">Ngừng hoạt động</option>
+                    <option disabled>-- Lựa chọn trạng thái --</option>
+                    <option value="active" <% if(user.status === 'active') {%>selected<% } %>>Hoạt động</option>
+                    <option value="inactive" <% if(user.status === 'inactive') {%>selected<% } %>>Ngừng hoạt động</option>
                   </select>
                 </div>
               </div>
@@ -129,7 +157,7 @@
               <div class="col-lg-7 col-md-6 col-12">
                 <div class="form-group mb-4">
                   <label for="address" class="fw-bold"> Địa chỉ </label>
-                  <input type="text" name="address" id="address" class="form-control" />
+                  <input type="text" name="address" value="<%= user.address %>" id="address" class="form-control" />
                 </div>
               </div>
 
@@ -143,7 +171,7 @@
                     type="radio"
                     name="isVerified"
                     value="active"
-                    checked
+                    <% if(user.isVerified) { %> checked <% } %>
                     class="form-check-input"
                     id="isVerified-active"
                   />
@@ -152,15 +180,17 @@
                     type="radio"
                     name="isVerified"
                     value="inactive"
+                    <% if(!user.isVerified) { %> checked <% } %>
                     class="form-check-input"
                     id="isVerified-inactive"
                   />
                   <label for="isVerified-inactive">Chưa xác minh</label>
                 </div>
               </div>
+
             </div>
             <button type="submit" class="btn btn-outline-primary w-100 form-create">
-              <i class="bi bi-plus-lg me-1"></i>Thêm mới người dùng
+              <i class="bi bi-pencil-square me-1"></i>Cập nhật tài khoản
             </button>
           </div>
         </form>
@@ -175,11 +205,12 @@
     <script src="/admin/scripts/sidebarToggle.js"></script>
     <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/previewImage.js"></script>
+    <script src="/admin/scripts/showAlert.js"></script>
     <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/aaf479b433.js" crossorigin="anonymous"></script>
-    <script src="../../reload/reload.js"></script>
+    <script src="../../../reload/reload.js"></script>
   </body>
 </html>
